[package]
name = "u_u"
version = "2020.0.1"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rellfy/u_u"
repository = "https://github.com/rellfy/u_u"
description = "Library allowing conversions of JPEG diagrams to SVGs"
readme = "README.md"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
