[package]
name = "u_u"
version = "0.1.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rellfy/u_u"
repository = "https://github.com/rellfy/u_u"
description = "Library allowing conversions of JPEG diagrams to SVGs"
readme = "README.md"

[features]
default = []
debug = []

[dependencies]
jpeg-decoder = "0.3.0"
thiserror = "1.0.40"
png = "0.17.8"
vtracer = "0.5.0"
visioncortex = "0.8.0"
